Revert to python implementation

--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -21,7 +21,21 @@ jobs:
 
          - name: Install base dependencies
            run: |
-              dnf install -y rpm-build rpmdevtools copr-cli git curl bash
+              dnf install -y python3 python3-pip rpm-build rpmdevtools copr-cli git curl
+
+         - name: Install UV
+           run: |
+              curl -LsSf https://astral.sh/uv/install.sh | sh
+              echo "/root/.local/bin" >> $GITHUB_PATH
+
+         - name: Install Python dependencies with UV
+           run: |
+              uv self update
+              uv venv
+              echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
+              echo "$PWD/.venv/bin" >> $GITHUB_PATH
+              uv pip install requests
+              uv pip install copr
 
          - name: Setup RPM build environment
            run: |
@@ -48,20 +62,17 @@ jobs:
 
               # Copy files to the correct location
               cp zen-browser.spec /root/rpmbuild/SPECS/
-              cp update-zen-browser.sh /root/rpmbuild/SPECS/
-
-              # Make script executable
-              chmod +x /root/rpmbuild/SPECS/update-zen-browser.sh
+              cp update-zen-browser.py /root/rpmbuild/SPECS/
 
               # Run the script with absolute path
               cd /root/rpmbuild/SPECS
-              ./update-zen-browser.sh | tee update.log
+              python3 update-zen-browser.py
 
          - name: Set version output
            id: set-version
            run: |
               # Check if we have a new version
-              if grep -q "New version found" /root/rpmbuild/SPECS/update.log 2>/dev/null || [ -f /root/rpmbuild/SRPMS/*.src.rpm ]; then
+              if grep -q "New version found" /root/rpmbuild/SPECS/*.log 2>/dev/null || [ -f /root/rpmbuild/SRPMS/*.src.rpm ]; then
                 NEW_VERSION=$(grep "^Version:" /root/rpmbuild/SPECS/zen-browser.spec | awk '{print $2}')
                 echo "version=${NEW_VERSION}" >> $GITHUB_OUTPUT
                 echo "updated=true" >> $GITHUB_OUTPUT
